<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCal</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTextView">Bill</string>
    <string name="billEditText">0.00</string>
    <string name="tipAmountText">Tip</string>
    <string name="adjustTipTextView">Adjust Tip</string>
    <string name="percentSign">%</string>
    <string name="finalBillText">Final Bill</string>
    <string name="waitressScore">Score: </string>
    <string name="waitressScoreNum">0.0</string>
    <string name="addWaiterInfo">Add Waiter</string>
    <string name="resetAll">Reset All</string>

    <string-array name="restaurantInfo">
        <item>Select Restaurant</item>
        <item>Apple Bee\'s</item>
    </string-array>

    <string-array name="restaurantLocaleInfo">
        <item>Select Location</item>
        <item>Rufe Snow</item>
        <item>Saginaw Main St.</item>
    </string-array>

    <string-array name="waitressInfo">
        <item>Select Waiter</item>
        <item>Jason Rodriguez</item>
    </string-array>

    <string name="title_activity_add_waiter">AddWaiterActivity</string>
    <string name="waiterName">Waiter Name</string>
    <string name="restaurantNameTextView">Restaurant Name</string>
    <string name="server_name">Server Name</string>
    <string name="add_server_bttn">Add Server</string>
    <string name="reset_DB">Reset DB</string>
    <string name="pickRestaurant">Please pick a restuarant</string>
    <string name="pickLocation">Pick a location</string>
    <string name="addServer">Add Server</string>


</resources>
